Not much added, need to read more

--- a/doc/sections/theory.tex
+++ b/doc/sections/theory.tex
@@ -2,5 +2,9 @@
 
 \begin{document}
 \section{Theory}
+\subsection{Datasets}
+We will analyze the following datasets:
+\subsubsection{MNIST}
+The famous MNIST dataset is a collection of handwritten numbers, as $28\times 28$ grayscale images. It comes in two sets, a training set with $60,000$ images, and a testing set with $10,000$ images. In this report, we will model the inputs as a $28\times 28 = 784$-dimensional vector, and the output as a $10$-dimensional state vector, with each dimension representing the corresponding digit.
 
 \end{document}
