--- a/doc/sections/theory.tex
+++ b/doc/sections/theory.tex
@@ -7,4 +7,16 @@ We will analyze the following datasets:
 \subsubsection{MNIST}
 The famous MNIST dataset is a collection of handwritten numbers, as $28\times 28$ grayscale images. It comes in two sets, a training set with $60,000$ images, and a testing set with $10,000$ images. In this report, we will model the inputs as a $28\times 28 = 784$-dimensional vector, and the output as a $10$-dimensional state vector, with each dimension representing the corresponding digit.
 
+\subsection{Stochastic Gradient Descent}
+\textit{Gradient descent} describes the process of finding a local minimum of a function (the cost function, in our case) by following the negative value of the gradient at each point, stepwise. \textit{Stochastic gradient descent} or SDG is a way of increasing the numerical efficiency of this process, by doing this process stochastically.
+
+This involves randomly dividing the training data into a given number of \textit{mini batches}. For each mini batch, the gradient is found by averaging the gradient value each mini batch sample has. Then the weights and biases are updated (take a step down the "slope") and the process is repeated for the rest of the mini batches. The updating done at each mini batch is expressed mathematically as
+
+\begin{align*}
+    w&\rightarrow w' = w - \frac{\eta}{m}\sum_i^m \nabla C_i \\
+    b&\rightarrow b' = b - \frac{\eta}{m}\sum_i^m \nabla C_i,
+\end{align*}
+
+where $m$ is the number of datapoints in the mini batches and $\nabla C_i$ is the gradient at each individual data point. After exhausting all the training data, we have finished a so-called \textit{epoch}, of which we can perform as many as necessary.
+
 \end{document}
