--- a/doc/sections/introduction.tex
+++ b/doc/sections/introduction.tex
@@ -2,5 +2,11 @@
 
 \begin{document}
 \section{Introduction}
+Classification algorithms are an invaluable tool in our daily life with broad applications, such as medical diagnosis, image and speech recognition, fraud detection, spam detection, traffic prediction, automatic language translation and finance. In the field of machine learning, classification is considered an instance of supervised learning, or put differently, learning where a training set of correctly identified observations is available.
 
+Regression problems is the other group of supervised learning. Both classification and regression problems have as goal to construct a model that can predict the value of the dependent attribute from the attribute variables. The difference between the tasks is that the dependent attribute is numerical for regression and categorical for classification.
+
+The purpose of this work is to gain an increased understanding of machine learning applications by studying both classification and regression problems. Thus, we develop a feed forward neural network (FFNN) code, and we also include logistic regression for the classification problems. The methods will be tested on the MNIST dataset. In addition we use FFNN to fit a data set generated using Franke’s function. The results of the analysis on the Franke's function dataset will be compared to the results of our previous work on regression methods \cite{project2}. 
+
+This report is divided into x parts. First we review some important concepts ... Last, a critical evaluation of the various algorithms will be given. 
 \end{document}
