Wrote some theory on logistic regression

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -5,3 +5,17 @@
     title={Applying Regression and Resampling Techniquesto Norwegian Terrain Data with Franke’sFunction as Test Function}, url={https://github.com/kmaasrud/reg-resample-fys-stk4155/blob/master/doc/main.pdf}, 
     author={Aasrud, Knut Magnus and Niane, Philip Karim and Due-Sørensen, Ida}, year={2020}
     } 
+
+@book{HastieTrevor2009EoSL,
+series = {Springer series in statistics},
+abstract = {Covers supervised learning (prediction) to unsupervised learning. This book contains topics including neural networks, support vector machines, classification trees and boosting.},
+publisher = {Springer},
+booktitle = {<h>Elements</h> of <h>Statistical</h> <h>Learning</h>},
+isbn = {0387848576},
+year = {2009},
+title = {Elements of Statistical Learning: Data Mining, Inference, and Prediction},
+language = {eng},
+address = {New York},
+author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+keywords = {Data mining ; Supervised learning (Machine learning) ; Mathematical statistics},
+}
