--- a/doc/main.tex
+++ b/doc/main.tex
@@ -7,7 +7,8 @@
 \usepackage{hyperref}   % Nice referencing with clickable links
 \usepackage{amsmath}    % Math
 \usepackage[style=ieee]{biblatex}   % Citations
-%\usepackage{csquotes}   % Honestly no idea what this does...
+\usepackage{fvextra}
+\usepackage{csquotes}   % Honestly no idea what this does...
 \usepackage{minted}
 \usepackage{comment}
 \usepackage{amssymb}
