--- a/doc/sections/appendix.tex
+++ b/doc/sections/appendix.tex
@@ -2,5 +2,7 @@
 
 \begin{document}
 \section{Appendix}
+\subsection{Source code}
+All the source code is located in \href{https://github.com/kmaasrud/ffnn-fys-stk4155}{this GitHub repository}.
 
 \end{document}
