--- a/doc/references.bib
+++ b/doc/references.bib
@@ -19,3 +19,26 @@ address = {New York},
 author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
 keywords = {Data mining ; Supervised learning (Machine learning) ; Mathematical statistics},
 }
+
+@book{FrankeRichard1979,
+year = {1979},
+title = {A Critical Comparison of Some Methods for Interpolation of Scattered Data},
+copyright = {APPROVED FOR PUBLIC RELEASE},
+language = {eng},
+author = {Franke, Richard},
+keywords = {COMPUTER GRAPHICS ; DATA REDUCTION ; FINITE ELEMENT ANALYSIS ; PE61152N ; STANDARD DEVIATION ; WEIGHTING FUNCTIONS ; INTERPOLATION ; NUMERICAL METHODS AND PROCEDURES ; BIVARIATE DENSITY FUNCTIONS ; SMOOTHING ; APPROXIMATION(MATHEMATICS) ; Statistics and Probability ; COMPARISON},
+organization = {NAVAL POSTGRADUATE SCHOOL MONTEREY CA},
+}
+
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011},
+ url={https://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_breast_cancer.html}
+}
